--- a/Controls/Source/UIControls/UIControls/Classes/ImageLoading/FaceAwareVc.xib
+++ b/Controls/Source/UIControls/UIControls/Classes/ImageLoading/FaceAwareVc.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -13,27 +14,27 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FaceAwareVc" customModule="ThirdPartyControls" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FaceAwareVc" customModule="UIControls" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SPN-GT-fn6">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="lgD-ag-Kgy">
-                            <rect key="frame" x="18" y="122" width="112.5" height="112.5"/>
+                            <rect key="frame" x="18" y="50" width="96" height="96"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="lgD-ag-Kgy" secondAttribute="height" id="aNN-hV-aDE"/>
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="qmj-sj-0Hx">
-                            <rect key="frame" x="244.5" y="122" width="112.5" height="112.5"/>
+                            <rect key="frame" x="206" y="50" width="96" height="96"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="qmj-sj-0Hx" secondAttribute="height" id="ahk-VI-kAt"/>
                             </constraints>
@@ -41,14 +42,69 @@
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="focusOnFaces" value="YES"/>
                             </userDefinedRuntimeAttributes>
                         </imageView>
+                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="26S-wB-epe">
+                            <rect key="frame" x="18" y="205" width="96" height="96"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="26S-wB-epe" secondAttribute="height" id="N7n-vD-hZ6"/>
+                            </constraints>
+                        </imageView>
+                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="uEl-ju-yvQ">
+                            <rect key="frame" x="208" y="205" width="96" height="96"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="uEl-ju-yvQ" secondAttribute="height" id="IQQ-Yy-Z7D"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="focusOnFaces" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FaceAware" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8nQ-1Y-5CA">
-                            <rect key="frame" x="261.5" y="242.5" width="82.5" height="20.5"/>
+                            <rect key="frame" x="214" y="154" width="83" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIi-EW-NeP">
-                            <rect key="frame" x="45.5" y="242.5" width="59" height="20.5"/>
+                            <rect key="frame" x="37" y="154" width="59" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FaceAware" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uYD-vB-HyM">
+                            <rect key="frame" x="221" y="317" width="83" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csP-hh-dAm">
+                            <rect key="frame" x="43" y="317" width="59" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IZ3-jB-zrh">
+                            <rect key="frame" x="18" y="354" width="96" height="96"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="IZ3-jB-zrh" secondAttribute="height" id="1oV-Eu-dVB"/>
+                            </constraints>
+                        </imageView>
+                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mHR-3H-FEl">
+                            <rect key="frame" x="208" y="354" width="96" height="96"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="mHR-3H-FEl" secondAttribute="height" id="D78-3F-O1r"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="focusOnFaces" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </imageView>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2S-u7-0ga">
+                            <rect key="frame" x="52" y="462" width="59" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FaceAware" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M2t-Ts-fdV">
+                            <rect key="frame" x="222" y="463" width="83" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -57,15 +113,37 @@
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailingMargin" secondItem="qmj-sj-0Hx" secondAttribute="trailing" constant="10" id="2dY-ka-R5F"/>
+                        <constraint firstItem="w2S-u7-0ga" firstAttribute="leading" secondItem="SPN-GT-fn6" secondAttribute="leading" constant="52" id="2ff-Go-pOi"/>
                         <constraint firstItem="8nQ-1Y-5CA" firstAttribute="top" secondItem="qmj-sj-0Hx" secondAttribute="bottom" constant="8" id="45Q-9U-gKa"/>
+                        <constraint firstAttribute="trailing" secondItem="uEl-ju-yvQ" secondAttribute="trailing" constant="16" id="4P8-jN-kM5"/>
                         <constraint firstItem="lgD-ag-Kgy" firstAttribute="width" secondItem="SPN-GT-fn6" secondAttribute="width" multiplier="0.3" id="5NV-Bl-Clj"/>
-                        <constraint firstItem="lgD-ag-Kgy" firstAttribute="centerY" secondItem="SPN-GT-fn6" secondAttribute="centerY" priority="999" constant="-155.5" id="6H3-nu-qCU"/>
+                        <constraint firstItem="uYD-vB-HyM" firstAttribute="firstBaseline" secondItem="csP-hh-dAm" secondAttribute="firstBaseline" id="5aa-2s-vcq"/>
                         <constraint firstItem="qmj-sj-0Hx" firstAttribute="width" secondItem="SPN-GT-fn6" secondAttribute="width" multiplier="0.3" id="7EM-uP-fBR"/>
+                        <constraint firstItem="IZ3-jB-zrh" firstAttribute="leading" secondItem="SPN-GT-fn6" secondAttribute="leading" constant="18" id="7Yk-2u-ReQ"/>
+                        <constraint firstItem="IZ3-jB-zrh" firstAttribute="top" secondItem="csP-hh-dAm" secondAttribute="bottom" constant="16" id="C5o-ig-osf"/>
+                        <constraint firstItem="26S-wB-epe" firstAttribute="width" secondItem="26S-wB-epe" secondAttribute="height" id="EkZ-gL-B4W"/>
+                        <constraint firstItem="IZ3-jB-zrh" firstAttribute="width" secondItem="SPN-GT-fn6" secondAttribute="width" multiplier="0.3" id="HII-wA-muZ"/>
                         <constraint firstItem="qmj-sj-0Hx" firstAttribute="centerY" secondItem="lgD-ag-Kgy" secondAttribute="centerY" id="HOV-Tt-G7g"/>
                         <constraint firstItem="8nQ-1Y-5CA" firstAttribute="centerX" secondItem="qmj-sj-0Hx" secondAttribute="centerX" constant="1.5" id="IUP-9r-JQD"/>
+                        <constraint firstItem="uYD-vB-HyM" firstAttribute="baseline" secondItem="csP-hh-dAm" secondAttribute="baseline" id="OgP-UW-MTl"/>
+                        <constraint firstItem="mHR-3H-FEl" firstAttribute="width" secondItem="SPN-GT-fn6" secondAttribute="width" multiplier="0.3" id="VYZ-4t-0RH"/>
+                        <constraint firstAttribute="trailing" secondItem="mHR-3H-FEl" secondAttribute="trailing" constant="16" id="Ztv-zP-d41"/>
                         <constraint firstItem="lgD-ag-Kgy" firstAttribute="leading" secondItem="SPN-GT-fn6" secondAttribute="leadingMargin" constant="10" id="aoT-B9-gB5"/>
+                        <constraint firstItem="26S-wB-epe" firstAttribute="leading" secondItem="SPN-GT-fn6" secondAttribute="leading" constant="18" id="bNH-2X-7SC"/>
+                        <constraint firstItem="uEl-ju-yvQ" firstAttribute="width" secondItem="SPN-GT-fn6" secondAttribute="width" multiplier="0.3" id="dQU-Rq-Mye"/>
+                        <constraint firstItem="uYD-vB-HyM" firstAttribute="top" secondItem="uEl-ju-yvQ" secondAttribute="bottom" constant="16.5" id="df2-4W-hWf"/>
+                        <constraint firstItem="csP-hh-dAm" firstAttribute="leading" secondItem="SPN-GT-fn6" secondAttribute="leading" constant="43" id="f1w-Rw-a2g"/>
+                        <constraint firstItem="lgD-ag-Kgy" firstAttribute="top" secondItem="SPN-GT-fn6" secondAttribute="top" constant="50" id="f61-eU-3Mt"/>
+                        <constraint firstItem="uYD-vB-HyM" firstAttribute="trailing" secondItem="uEl-ju-yvQ" secondAttribute="trailing" id="iaD-uc-ExQ"/>
                         <constraint firstItem="TIi-EW-NeP" firstAttribute="top" secondItem="lgD-ag-Kgy" secondAttribute="bottom" constant="8" id="k29-Gc-glw"/>
+                        <constraint firstItem="mHR-3H-FEl" firstAttribute="top" secondItem="uYD-vB-HyM" secondAttribute="bottom" constant="16" id="lfF-x2-R9C"/>
+                        <constraint firstItem="uEl-ju-yvQ" firstAttribute="centerY" secondItem="26S-wB-epe" secondAttribute="centerY" id="ozB-Jv-jWb"/>
                         <constraint firstItem="TIi-EW-NeP" firstAttribute="centerX" secondItem="lgD-ag-Kgy" secondAttribute="centerX" id="tDt-CN-sdH"/>
+                        <constraint firstItem="26S-wB-epe" firstAttribute="width" secondItem="SPN-GT-fn6" secondAttribute="width" multiplier="0.3" id="tsh-zD-xXs"/>
+                        <constraint firstItem="mHR-3H-FEl" firstAttribute="centerY" secondItem="IZ3-jB-zrh" secondAttribute="centerY" id="uVM-0I-qHl"/>
+                        <constraint firstItem="26S-wB-epe" firstAttribute="top" secondItem="TIi-EW-NeP" secondAttribute="bottom" constant="30" id="wAT-ku-xiQ"/>
+                        <constraint firstItem="w2S-u7-0ga" firstAttribute="top" secondItem="IZ3-jB-zrh" secondAttribute="bottom" constant="12" id="wHe-FV-BL6"/>
+                        <constraint firstAttribute="bottom" secondItem="uYD-vB-HyM" secondAttribute="bottom" constant="230" id="xSE-2w-JFY"/>
                     </constraints>
                 </view>
             </subviews>
