--- a/Controls/Source/UIControls/UIControls/Classes/ProgressBar/Progressbars/KDCircularProgressVc.xib
+++ b/Controls/Source/UIControls/UIControls/Classes/ProgressBar/Progressbars/KDCircularProgressVc.xib
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KDCircularProgressVc" customModule="ThirdPartyControls" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KDCircularProgressVc" customModule="UIControls" customModuleProvider="target">
             <connections>
                 <outlet property="progress" destination="EOn-Jr-dR5" id="4fw-Rq-uZT"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
