--- a/Controls/Source/UIControls/UIControls/Classes/ProgressBar/Progressbars/MidPointCircularSliderVc.xib
+++ b/Controls/Source/UIControls/UIControls/Classes/ProgressBar/Progressbars/MidPointCircularSliderVc.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MidPointCircularSliderVc" customModule="ThirdPartyControls" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MidPointCircularSliderVc" customModule="UIControls" customModuleProvider="target">
             <connections>
                 <outlet property="lblValue" destination="oGO-bx-Us9" id="3bt-YH-fLI"/>
                 <outlet property="midPointSlider" destination="S5y-1U-1O6" id="c98-re-S3z"/>
@@ -24,7 +24,7 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S5y-1U-1O6" customClass="MidPointCircularSlider" customModule="HGCircularSlider">
                     <rect key="frame" x="27" y="173.5" width="320" height="320"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="320" id="U4t-Tv-QdC"/>
                         <constraint firstAttribute="width" constant="320" id="cKP-QP-c5U"/>
@@ -73,7 +73,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="oGO-bx-Us9" firstAttribute="top" secondItem="S5y-1U-1O6" secondAttribute="bottom" constant="25" id="4Pc-Ey-mB8"/>
                 <constraint firstItem="S5y-1U-1O6" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="d4c-aj-LPX"/>
